<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Android界面布局实验"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/btn_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linearlayout"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tablelayout"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_constraint_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relativelayout1"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_constraint_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relativelayout2"
        android:layout_marginBottom="10dp" />

</LinearLayout>